--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HireAct - Your Placement Partner</title>
+    <title>HireAct - Your Placement Partner | Staffing Solutions</title>
+    <meta name="description" content="HireAct provides comprehensive staffing solutions including temporary staffing, permanent staffing, training & development, and apprenticeship programs across multiple industries.">
+    <meta name="keywords" content="staffing, recruitment, placement, temporary staffing, permanent staffing, training, apprenticeship, NAPS, NATS">
+    <meta name="author" content="HireAct">
+    <meta property="og:title" content="HireAct - Your Placement Partner">
+    <meta property="og:description" content="Empowering futures, connecting talent with comprehensive staffing and training solutions.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.hireact.in">
+    <link rel="canonical" href="https://www.hireact.in">
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
